--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = 
+	celliesprojects/wm8978-esp32@^1.0.5
+	esphome/ESP32-audioI2S@^2.0.6
