增加DHT11 温湿度传感器

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 upload_port = COM[6]
-;board_build.partitions = partition.csv
-;lib_deps = 
-;	celliesprojects/wm8978-esp32@^1.0.5
-;	esphome/ESP32-audioI2S@^2.0.6
+lib_deps = 
+    adafruit/DHT sensor library@^1.4.4
+	celliesprojects/wm8978-esp32@^1.0.5
+	esphome/ESP32-audioI2S@^2.0.6
