--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,11 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-upload_port = COM[6]
+upload_port = COM[5]
+board_build.partitions = partition.csv
 lib_deps = 
-    adafruit/DHT sensor library@^1.4.4
+	adafruit/DHT sensor library@^1.4.4
 	celliesprojects/wm8978-esp32@^1.0.5
 	esphome/ESP32-audioI2S@^2.0.6
+	https://github.com/pschatzmann/ESP32-A2DP
+	olikraus/U8g2@2.34.16
