--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,12 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 upload_port = COM[5]
+;将CPU频率设置为240MHz
+board_build.f_cpu = 240000000L
+;将flash频率设置为80MHz
+board_build.f_flash = 80000000L
+;上传速度修改为921600
+upload_speed = 921600
 board_build.partitions = partition.csv
 lib_deps = 
 	adafruit/DHT sensor library@^1.4.4
